# alemian-saga

./: .firebaserc  .gitignore  Cargo.toml  LICENSE.txt  README.md  build.sh  buildDebug.sh  copy-files.sh  deploy.sh  firebase.json  format.sh  index.html
.github/actions/alemian-saga-build-full/: action.yml
.github/workflows/: build-check.yml  firebase-hosting-merge.yml  test.yml
alemian-saga/: Cargo.toml  README.md  buildDebug.sh  buildRelease.sh
alemian-saga-core/: Cargo.toml  README.md
alemian-saga-core/src/: detail.rs  lib.rs  serialization.rs
alemian-saga-core/src/detail/: constants.rs  file_wrapper.rs  game.rs  keybindings.rs  mod.rs  rectangle.rs  run.rs  tile.rs  unit.rs  utility.rs  vector.rs
alemian-saga-core/src/numeric_types/: accuracy_points.rs  hit_points.rs  level.rs  map_distance.rs  mod.rs
alemian-saga-core/src/numeric_types/i32/: mks.rs  mod.rs
alemian-saga-core/src/numeric_types/u32/: mod.rs
alemian-saga-desktop/: Cargo.toml
alemian-saga-desktop/src/: main.rs
alemian-saga-lib/: Cargo.toml
alemian-saga/src/: lib.rs
dev_utils/: buildDebug.sh  copy-files.sh  format.sh
dev_utils/json-to-msgpack/: Cargo.toml
dev_utils/json-to-msgpack/src/: main.rs
dev_utils/test/: Cargo.toml
dev_utils/test/src/: main.rs
game/: Cargo.toml  buildRelease.sh
game-lib/: Cargo.toml
game-lib/src/: lib.rs
game/src/: lib.rs  locale.rs
json-files/: map.json  test.json
json-to-msgpack/: Cargo.toml
json-to-msgpack/src/: main.rs
language/: english.json
public/: game.html  index.html
public/keybindings/: us.json
src/: _lib.rs  game.rs  lib.rs
static-content/: index.html
static-content/keybindings/: us.json
test/: Cargo.toml
test/src/: main.rs
