[package]
name = "alemian-saga-core"
version = "0.4.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
edition = "2018"
description = "Game logic for Alemian Saga: The Revolt"
repository = "https://github.com/CalebLBaker/alemian-saga"
license = "MIT"

[dependencies]
async-trait = "0.1.42"
binary-heap-plus = "0.4.1"
compare = "0.1.0"
futures = "0.3.12"
ndarray = { version = "0.14.0", features = ["serde"] }
num-traits = "0.2.14"
rmp-serde = "0.15.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.6"
uom = { version = "0.31.1", features = ["i32", "u32", "std", "use_serde"] }

[features]
# Treat warnings as errors
strict = []

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true

