[package]
name = "alemian-saga-core"
version = "0.4.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
edition = "2018"
description = "Game logic for Alemian Saga: The Revolt"
repository = "https://github.com/CalebLBaker/alemian-saga"
license = "MIT"

[dependencies]
async-trait = "^0.1"
binary-heap-plus = "^0.4"
compare = "^0.1"
futures = "^0.3"
ndarray = { version = "^0.15", features = ["serde"] }
num-traits = "^0.2"
rmp-serde = "^0.15"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_repr = "^0.1"
uom = { version = "^0.31", features = ["i32", "u32", "std", "use_serde"] }

[features]
# Treat warnings as errors
strict = []

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true

