[package]
name = "alemian-saga"
version = "0.1.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
bytes = "1.0"
console_error_panic_hook = "0.1.6"
futures = "0.3.12"
reqwest = "0.11.0"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
alemian-saga-lib = { path = "../alemian-saga-lib" }

[dependencies.web-sys]
version = "0.3.46"
features = [
  'CanvasRenderingContext2d',
  'console',
  'CssStyleDeclaration',
  'Document',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'KeyboardEvent',
  'MouseEvent',
  'Window',
]

[features]
# Treat warnings as errors
strict = ["alemian-saga-lib/strict"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

