[package]
name = "alemian-saga"
version = "0.1.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
edition = "2018"
description = "In-browser web sersion of Alemian Saga: The Revolt"
repository = "https://github.com/CalebLBaker/alemian-saga"
license = "MIT"

[dependencies]
async-trait = "0.1.42"
bytes = "1.0"
console_error_panic_hook = "0.1.6"
futures = "0.3.12"
reqwest = "0.11.0"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
alemian-saga-core = { path = "../alemian-saga-core" }

[dependencies.web-sys]
version = "0.3.46"
features = [
  'CanvasRenderingContext2d',
  'console',
  'CssStyleDeclaration',
  'Document',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'KeyboardEvent',
  'MouseEvent',
  'Window',
]

[features]
# Treat warnings as errors
strict = ["alemian-saga-core/strict"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

