[package]
name = "alemian-saga"
version = "0.4.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
edition = "2018"
description = "In-browser web version of Alemian Saga: The Revolt"
repository = "https://github.com/CalebLBaker/alemian-saga"
license = "MIT"

[dependencies]
async-trait = "^0.1"
bytes = "^1"
futures = "^0.3"
gloo-events = "^0.1"
js-sys = "^0.3"
reqwest = "^0.11"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
alemian-saga-core = { path = "../alemian-saga-core" }
console_error_panic_hook = { version = "^0.1", optional = true }

[dependencies.web-sys]
version = "^0.3"
features = [
  'CanvasRenderingContext2d',
  'console',
  'CssStyleDeclaration',
  'Document',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'KeyboardEvent',
  'MouseEvent',
  'WheelEvent',
  'Window',
]

[features]
# Treat warnings as errors
strict = ["alemian-saga-core/strict"]
stack-trace = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

