[package]
name = "game-lib"
version = "0.1.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
ndarray = { version = "0.14.0", features = ["serde"] }
serde = { version = "1.0.119", features = ["derive"] }

[features]
# Treat warnings as errors
strict = []

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true

