[package]
name = "game"
version = "0.1.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
bytes = "1.0"
console_error_panic_hook = "0.1.6"
reqwest = "0.11.0"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
game-lib = { path = "../game-lib" }

[dependencies.web-sys]
version = "0.3.46"
features = [
  'CanvasRenderingContext2d',
  'console',
  'CssStyleDeclaration',
  'Document',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'Window',
]

[features]
# Treat warnings as errors
strict = ["game-lib/strict"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

