[package]
name = "json-to-msgpack"
version = "0.1.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = { version = "0.14.0", features = ["serde"] }
rmp-serde = "0.15.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0"
alemian-saga-core = { path = "../alemian-saga-core" }

