[package]
name = "alemian-saga-tests"
version = "0.1.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
edition = "2018"
description = "Automated testing for Alemian Saga: The Revolt"
repository = "https://github.com/CalebLBaker/alemian-saga"
license = "MIT"

[dependencies]
async-trait = "0.1.42"
futures = "0.3.12"
ndarray = "0.14.0"
rmp-serde = "0.15.1"
alemian-saga-core = { path = "../alemian-saga-core", features = [ "strict" ] }

