[package]
name = "json-to-msgpack"
version = "0.3.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = { version = "^0.15", features = ["serde"] }
rmp-serde = "^0.15"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
alemian-saga-core = { path = "../../alemian-saga-core" }

